[FIX] web: make calendar popover responsive
Versions:
---------
- 16.0

Steps to reproduce:
-------------------
- go to planning calender
- click on shifts in calendar entries

Issue:
------
The size of the popover enlarges when the content of
the field is large, and the child element does not
inherit the width of its parent elements.

Cause:
------
The popover title and body expand in response to the
content of the fields, causing the popover size to
become larger.

Solution:
---------
Setting a maximum width and enabling text truncation will make
it appear more visually appealing.

task-3446307

closes odoo/odoo#174402

X-original-commit: 7a5eeea94fb2e993117f5ece7cb6df5066f41036

--- a/addons/web/static/src/views/calendar/calendar_common/calendar_common_popover.scss
+++ b/addons/web/static/src/views/calendar/calendar_common/calendar_common_popover.scss
@@ -6,6 +6,14 @@ $o-cw-popup-avatar-size: 16px;
     z-index: $zindex-modal - 1;
     font-size: $font-size-base;
 
+    .role-container span {
+        display: block;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 100%;
+    }
+
     .card-header,
     .card-header .popover-header {
         font-size: 1.05em;
